# LabsCPP

Lab2/: CMakeLists.txt  Parser.cpp  Parser.h  WorkFlow.cpp  WorkFlow.h  main.cpp
Lab2/Commands/: Dump.cpp  Dump.h  Grep.cpp  Grep.h  ReadFile.cpp  ReadFile.h  Replace.cpp  Replace.h  Sort.cpp  Sort.h  Worker.h  WriteFile.cpp  WriteFile.h
Lab2/Factory/: BlockFactory.cpp  BlockFactory.h  Creator.cpp  Creator.h  ICreator.h  SingletonInit.cpp
ShipBattle/: CMakeLists.txt  Game.cpp  Game.h  IGamer.cpp  IGamer.h  StringResources.h  help.txt  main.cpp  statistics.txt
ShipBattle/Console/: ConsoleOperations.cpp  ConsoleOperations.h  welcomeToBattleShip.txt
ShipBattle/Factory/: GamerFactory.cpp  GamerFactory.h  GamerMaker.h  IGamerMaker.h
ShipBattle/Field/: Cell.cpp  Cell.h  Map.cpp  Map.h  Ship.cpp  Ship.h
ShipBattle/Gamers/: ConsoleGamer.cpp  ConsoleGamer.h  IGamer.h  OptimalGamer.cpp  OptimalGamer.h  RandomGamer.cpp  RandomGamer.h
lab0(intro)/: Counter.cpp  Counter.h  in.txt  main.cpp
lab1/: BitManipulationForTrit.cpp  BitManipulationForTrit.h  CMakeLists.txt  Tritset.cpp  Tritset.h  main.cpp
lab1/Google_tests/: CMakeLists.txt  test1.cpp
lab1/Tritset/: BitManipulationForTrit.cpp  CMakeLists.txt  Tritset.cpp  Tritset.h
